# my_first

my_first/: db.sqlite3  pyproject.toml
my_first/my_first/: settings.py  urls.py
my_first/site1/: admin.py  form.py  models.py  urls.py  views.py
my_first/site1/migrations/: 0001_initial.py  0002_molel2_alter_molel1_options_molel1_pole3.py  0003_alter_molel2_pole3.py  0004_remove_molel2_pole3.py  0005_molel2_pole3.py  0006_remove_molel2_pole3_molel2_pole4.py  0007_molel3.py  0008_molel4_alter_molel3_pole1_alter_molel3_pole2.py  0009_molel5_alter_molel3_pole1_alter_molel3_pole2.py
my_first/static/css/: style.html
my_first/templates/: 1.html
my_first/templates/site1/: about.html  base.html  base1.html  create.html  news.html
