[tool.poetry]
name = "my-first"
version = "0.1.0"
description = ""
authors = ["irenka28021995 <irenka28021995@yandex.by>"]
readme = "README.md"
packages = [{include = "my_first"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
